--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,8 @@
                 "ms-vscode.cmake-tools",
                 "vadimcn.vscode-lldb",
                 "llvm-vs-code-extensions.lldb-dap",
-                "llvm-vs-code-extensions.vscode-mlir"
+                "llvm-vs-code-extensions.vscode-mlir",
+                "ms-vscode.cpptools-extension-pack"
             ]
         }
     },
