lexer: setup gtest dep, add lexer unit tests
Signed-off-by: amila <amila.15@cse.mrt.ac.lk>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,8 +10,16 @@
             "name": "Debug ChocoPy",
             "preLaunchTask": "Build (Debug)",
             "program": "${workspaceFolder}/build/chocopyc",
-            "args": ["${workspaceFolder}/tests/parse/def_func_args.py"],
+            "args": ["${workspaceFolder}/tests/parse/def_func_nested.py"],
             "cwd": "${workspaceFolder}"
         },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Lexer Tests",
+            "preLaunchTask":  "Build Test (Debug)",
+            "program": "${workspaceFolder}/build/unittests/Lexer/LexerTest",
+            "cwd": "${workspaceFolder}"
+        }
     ]
 }
