--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,8 @@
                 "vadimcn.vscode-lldb",
                 "llvm-vs-code-extensions.lldb-dap",
                 "llvm-vs-code-extensions.vscode-mlir",
-                "ms-vscode.cpptools-extension-pack"
+                "ms-vscode.cpptools-extension-pack",
+                "kylinideteam.cmake-intellisence"
             ]
         }
     },
