--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
         "label": "Build (Debug)",
         "type": "shell",
         "linux": {
-          "command": "rm -rf build && mkdir -p ${workspaceFolder}/build && cd ${workspaceFolder}/build && cmake -G Ninja -DCMAKE_BUILD_TYPE=Debug .. && cmake --build ."
+          "command": "mkdir -p ${workspaceFolder}/build && cd ${workspaceFolder}/build && cmake -G Ninja -DCMAKE_BUILD_TYPE=Debug .. && cmake --build ."
         },
         "group": {
           "kind": "build",
@@ -16,7 +16,7 @@
         "label": "Build Test (Debug)",
         "type": "shell",
         "linux": {
-          "command": "rm -rf build && mkdir -p ${workspaceFolder}/build && cd ${workspaceFolder}/build && cmake -G Ninja -DENABLE_TESTS=ON -DCMAKE_BUILD_TYPE=Debug .. && cmake --build ."
+          "command": "mkdir -p ${workspaceFolder}/build && cd ${workspaceFolder}/build && cmake -G Ninja -DENABLE_TESTS=ON -DCMAKE_BUILD_TYPE=Debug .. && cmake --build ."
         },
         "group": {
           "kind": "build",
