Parser: unittests setup, tests for var defs
Signed-off-by: amila <amila.15@cse.mrt.ac.lk>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,6 +20,14 @@
             "preLaunchTask":  "Build Test (Debug)",
             "program": "${workspaceFolder}/build/unittests/Lexer/LexerTest",
             "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Parser Tests",
+            "preLaunchTask":  "Build Test (Debug)",
+            "program": "${workspaceFolder}/build/unittests/Parser/ParserTest",
+            "cwd": "${workspaceFolder}"
         }
     ]
 }
