--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 build
+a.out
+binary
+class.cpp
+class.ll
+dd.py
+makenoise.py
+test.py
+Representing ChocoPy Classes in MLIR.pdf
+class.cpp.md
+.DS_Store
